--- a/StarGeneratorChallenge.html
+++ b/StarGeneratorChallenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Generator Challenge - MicroStudio Lua</title>
+    <title>Star Generator Tutorial - MicroStudio Lua</title>
     <style>
         * {
             margin: 0;
@@ -118,6 +118,21 @@
             -ms-user-select: none;
         }
 
+        .code-block.copyable {
+            user-select: text;
+            -webkit-user-select: text;
+            -moz-user-select: text;
+            -ms-user-select: text;
+        }
+
+        .code-block.copyable pre {
+            user-select: text;
+            -webkit-user-select: text;
+            -moz-user-select: text;
+            -ms-user-select: text;
+            pointer-events: auto;
+        }
+
         .code-block pre {
             margin: 0;
             color: #a8e6cf;
@@ -139,6 +154,11 @@
             border-radius: 5px;
             font-size: 0.85em;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .code-block.copyable::before {
+            content: '✅ Copy mode enabled';
+            background: rgba(102, 234, 147, 0.8);
         }
 
         .info-box {
@@ -332,7 +352,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌟 Star Generator Challenge</h1>
+            <h1>🌟 Star Generator Tutorial</h1>
             <p class="subtitle">Learn to create a scrolling starfield in MicroStudio Lua</p>
         </header>
 
@@ -350,7 +370,19 @@
         <div class="step active" data-step="0">
             <h2>Welcome! 🚀</h2>
             <div class="step-content">
-                <p>In this challenge, you'll create a scrolling starfield background that simulates flying through space! We'll build it step by step, and after each step, you'll have a challenge to complete on your own.</p>
+                <p>In this tutorial, you'll create a scrolling starfield background that simulates flying through space! We'll build it step by step, and after each step, you'll have a challenge to complete on your own.</p>
+                
+                <div style="text-align: center; margin: 30px 0;">
+                    <h3 style="color: #667eea; margin-bottom: 15px;">Here's what you'll build:</h3>
+                    <iframe 
+                        src="https://microstudio.io/jocolloman/stargeneratorchallenge/8ZZ5TZ84/" 
+                        style="width: 100%; max-width: 800px; height: 600px; border: 3px solid #667eea; border-radius: 15px; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);"
+                        allowfullscreen>
+                    </iframe>
+                    <p style="margin-top: 15px; color: #a0a0a0; font-size: 0.95em;">
+                        ⭐ A beautiful animated starfield with depth and motion!
+                    </p>
+                </div>
                 
                 <div class="info-box">
                     <h3>🎯 What You'll Learn</h3>
@@ -727,7 +759,7 @@ end</pre>
         <div class="step" data-step="8">
             <h2>🎉 Congratulations!</h2>
             <div class="step-content">
-                <p>You've completed the Star Generator Challenge! You've learned how to use for loops with ranges and created a cool visual effect.</p>
+                <p>You've completed the Star Generator tutorial! You've learned how to use for loops with ranges and created a cool visual effect.</p>
 
                 <div class="complete-code">
                     <h3>📝 Complete Solution Code</h3>
@@ -863,7 +895,7 @@ end</pre>
                 updateDisplay();
             } else {
                 // Finished - could show a completion message or restart
-                alert('🎉 Congratulations! You\'ve completed the challenge! Feel free to review any step by clicking Previous.');
+                alert('🎉 Congratulations! You\'ve completed the tutorial! Feel free to review any step by clicking Previous.');
             }
         }
 
@@ -942,6 +974,28 @@ end</pre>
                 button.style.background = '#667eea';
             }, 2000);
         }
+
+        // Hidden function for teachers to enable copy mode
+        // Usage in console: enableCopyMode()
+        window.enableCopyMode = function() {
+            const codeBlocks = document.querySelectorAll('.code-block');
+            codeBlocks.forEach(block => {
+                block.classList.add('copyable');
+            });
+            console.log('✅ Copy mode enabled! Students can now select and copy code.');
+            return 'Copy mode is now active.';
+        };
+
+        // Hidden function to disable copy mode
+        // Usage in console: disableCopyMode()
+        window.disableCopyMode = function() {
+            const codeBlocks = document.querySelectorAll('.code-block');
+            codeBlocks.forEach(block => {
+                block.classList.remove('copyable');
+            });
+            console.log('🔒 Copy mode disabled! Code blocks are now read-only.');
+            return 'Copy mode is now disabled.';
+        };
 
         // Keyboard navigation
         document.addEventListener('keydown', (e) => {
