chore: Change tutorial to challenge.

--- a/StarGeneratorChallenge.html
+++ b/StarGeneratorChallenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Generator Tutorial - MicroStudio Lua</title>
+    <title>Star Generator Challenge - MicroStudio Lua</title>
     <style>
         * {
             margin: 0;
@@ -352,7 +352,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌟 Star Generator Tutorial</h1>
+            <h1>🌟 Star Generator Challenge</h1>
             <p class="subtitle">Learn to create a scrolling starfield in MicroStudio Lua</p>
         </header>
 
@@ -370,7 +370,7 @@
         <div class="step active" data-step="0">
             <h2>Welcome! 🚀</h2>
             <div class="step-content">
-                <p>In this tutorial, you'll create a scrolling starfield background that simulates flying through space! We'll build it step by step, and after each step, you'll have a challenge to complete on your own.</p>
+                <p>In this challenge, you'll create a scrolling starfield background that simulates flying through space! We'll build it step by step, and after each step, you'll have a challenge to complete on your own.</p>
                 
                 <div style="text-align: center; margin: 30px 0;">
                     <h3 style="color: #667eea; margin-bottom: 15px;">Here's what you'll build:</h3>
@@ -759,7 +759,7 @@ end</pre>
         <div class="step" data-step="8">
             <h2>🎉 Congratulations!</h2>
             <div class="step-content">
-                <p>You've completed the Star Generator tutorial! You've learned how to use for loops with ranges and created a cool visual effect.</p>
+                <p>You've completed the Star Generator challenge! You've learned how to use for loops with ranges and created a cool visual effect.</p>
 
                 <div class="complete-code">
                     <h3>📝 Complete Solution Code</h3>
@@ -895,7 +895,7 @@ end</pre>
                 updateDisplay();
             } else {
                 // Finished - could show a completion message or restart
-                alert('🎉 Congratulations! You\'ve completed the tutorial! Feel free to review any step by clicking Previous.');
+                alert('🎉 Congratulations! You\'ve completed the challenge! Feel free to review any step by clicking Previous.');
             }
         }
 
