--- a/AddingBoxes/steps/step6.html
+++ b/AddingBoxes/steps/step6.html
@@ -71,8 +71,8 @@
             <li>
                 <strong>Update <code>draw_eyes()</code></strong>
                 <ul>
-                    <li>Add two lines to draw the right eye bounding box (use <code>right_eye.color</code> and <code>right_eye.size</code>)</li>
-                    <li>Put these lines AFTER the left eye bounding box but BEFORE the sprite drawing</li>
+                    <li>Add one line to draw the right eye bounding box: <code>draw_box(right_eye)</code></li>
+                    <li>Put this line AFTER <code>draw_box(left_eye)</code> but BEFORE the sprite drawing</li>
                     <li>Update the right eye sprite drawing to use <code>right_eye.x</code> and <code>right_eye.y</code></li>
                 </ul>
             </li>
