chore: Finished adding boxes challenge.

--- a/AddingBoxes/steps/step10.html
+++ b/AddingBoxes/steps/step10.html
@@ -1,7 +1,7 @@
-<h2>🎉 Congratulations! You've Completed the Tutorial!</h2>
+<h2>🎉 Congratulations! You've Completed the Lesson!</h2>
 <div class="step-content">
     <div class="success-box" style="text-align: center; padding: 40px;">
-        <h3 style="font-size: 2em; margin-bottom: 20px;">🎓 Tutorial Complete!</h3>
+        <h3 style="font-size: 2em; margin-bottom: 20px;">🎓 Lesson Complete!</h3>
         <p style="font-size: 1.2em; margin-bottom: 20px;">
             You've successfully learned how to add bounding boxes to your game objects!
         </p>
@@ -9,7 +9,7 @@
 
     <div class="info-box">
         <h3>📚 What You've Accomplished</h3>
-        <p>Throughout this tutorial, you've learned:</p>
+        <p>Throughout this lesson, you've learned:</p>
         <ul>
             <li>✅ <strong>Step 1:</strong> Cloned the starter project</li>
             <li>✅ <strong>Step 2:</strong> Created the <code>create_box()</code> function</li>
@@ -54,7 +54,7 @@
             <li><strong>Polish:</strong> Add sound effects, particle effects, animations</li>
             <li><strong>Advanced Features:</strong> Power-ups, different enemy types, boss battles</li>
         </ul>
-        <p style="margin-top: 15px;"><strong>Stay tuned for more tutorials on these topics!</strong></p>
+        <p style="margin-top: 15px;"><strong>Stay tuned for more lessons on these topics!</strong></p>
     </div>
 
     <div class="info-box">
@@ -89,13 +89,13 @@
             <li><strong>Save your work:</strong> Make sure your project is saved in microStudio</li>
             <li><strong>Experiment:</strong> Try modifying values and see what happens</li>
             <li><strong>Share:</strong> Show your game to friends and get feedback</li>
-            <li><strong>Keep learning:</strong> Explore other microStudio tutorials and documentation</li>
+            <li><strong>Keep learning:</strong> Explore other microStudio lessons and documentation</li>
             <li><strong>Build your own:</strong> Use what you've learned to create your own games</li>
         </ul>
     </div>
 
     <div class="success-box" style="text-align: center; padding: 30px; margin-top: 30px;">
-        <h3 style="font-size: 1.8em; margin-bottom: 15px;">Thank You for Completing This Tutorial!</h3>
+        <h3 style="font-size: 1.8em; margin-bottom: 15px;">Thank You for Completing This Lesson!</h3>
         <p style="font-size: 1.1em;">
             You've taken an important step in your game development journey.<br>
             Keep coding, keep creating, and most importantly, keep having fun!
