--- a/AddingBoxes/steps/step2.html
+++ b/AddingBoxes/steps/step2.html
@@ -7,7 +7,7 @@
         <p>One of the best practices in programming is to <strong>reuse code</strong> you've already written. We'll add two helper functions:</p>
         <ul>
             <li><code>create_box()</code> - Creates a table with all the properties we need</li>
-            <li><code>draw_box()</code> - Draws a box on the screen (keeps our code clean!)</li>
+            <li><code>draw_box()</code> - Draws a box on the screen (keeps your code clean!)</li>
         </ul>
     </div>
 
@@ -63,7 +63,7 @@
             <li><code>screen:setColor(b.color)</code> - Sets the drawing color to the box's color</li>
             <li><code>screen:fillRect(b.x, b.y, b.size, b.size)</code> - Draws a filled rectangle</li>
         </ul>
-        <p><strong>Why use a helper function?</strong> Instead of writing these two lines every time we want to draw a box, we can just call <code>draw_box(left_eye)</code>. This keeps our code clean and makes it easy to change how boxes are drawn later!</p>
+        <p><strong>Why use a helper function?</strong> Instead of writing these two lines every time we want to draw a box, we can just call <code>draw_box(left_eye)</code>. This keeps your code clean and makes it easy to change how boxes are drawn later!</p>
     </div>
 
     <div class="warning-box">
