--- a/AddingBoxes/steps/step8.html
+++ b/AddingBoxes/steps/step8.html
@@ -67,7 +67,7 @@
                 <strong>Update <code>fire_laser()</code></strong>
                 <ul>
                     <li>Find the line that checks if a laser is off-screen: <code>lasers[ix].y > 300</code></li>
-                    <li>This should already work! The code accesses <code>.y</code> which exists on our box</li>
+                    <li>This should already work! The code accesses <code>.y</code> which exists on your box</li>
                     <li>The lines setting <code>fired_laser.y</code> and <code>fired_laser.x</code> should also work</li>
                 </ul>
             </li>
