--- a/AddingBoxes/steps/step9.html
+++ b/AddingBoxes/steps/step9.html
@@ -1,6 +1,6 @@
 <h2>Step 9: Refactor - Using Width and Height Instead of Size</h2>
 <div class="step-content">
-    <p>Excellent work! All our game objects now have bounding boxes. But there's a limitation: our boxes are always square because we use a single <code>size</code> property. Let's refactor to use separate <code>width</code> and <code>height</code> properties for more flexibility!</p>
+    <p>Excellent work! All your game objects now have bounding boxes. But there's a limitation: your boxes are always square because we use a single <code>size</code> property. Let's refactor to use separate <code>width</code> and <code>height</code> properties for more flexibility!</p>
 
     <div class="diagram">
         <h3 style="margin-bottom: 15px;">What Your Final Result Should Look Like:</h3>
@@ -17,7 +17,7 @@
 
     <div class="info-box">
         <h3>💡 What is Refactoring?</h3>
-        <p><strong>Refactoring</strong> means restructuring existing code to improve its design without changing its external behavior. In this step, we're making our bounding box system more flexible by supporting rectangular (not just square) boxes.</p>
+        <p><strong>Refactoring</strong> means restructuring existing code to improve its design without changing its external behavior. In this step, we're making your bounding box system more flexible by supporting rectangular (not just square) boxes.</p>
         <p><strong>Why separate width and height?</strong></p>
         <ul>
             <li>Some game objects are wider than they are tall (or vice versa)</li>
