--- a/AddingBoxes/index.html
+++ b/AddingBoxes/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adding Bounding Boxes - MicroStudio Lua Tutorial</title>
+    <title>Adding Bounding Boxes - MicroStudio Lua Lesson</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
