chore: Update steps to include links.

--- a/DestroyingEnemies/steps/step0.html
+++ b/DestroyingEnemies/steps/step0.html
@@ -15,6 +15,19 @@
         </ul>
     </div>
 
+    <div style="margin: 30px 0; background: rgba(102, 126, 234, 0.1); border: 2px solid rgba(102, 126, 234, 0.3); border-radius: 10px; padding: 20px;">
+        <h3 style="color: #667eea; margin-top: 0;">🎮 Finished Version - What You'll Create:</h3>
+        <p>Try the finished game below! Fire lasers with SPACE to destroy the enemy eyes. They'll disappear when hit and stop moving!</p>
+        <iframe src="https://microstudio.io/jocolloman/destroyingenemiessolution/Y2PUUPDN/"
+                width="100%"
+                height="500"
+                style="border: 2px solid rgba(246, 147, 251, 0.5); border-radius: 10px; background: #000;">
+        </iframe>
+        <p style="color: #a0a0a0; font-size: 0.95em; margin-top: 10px; text-align: center;">
+            This is your goal! By the end of this challenge, your game will work just like this.
+        </p>
+    </div>
+
     <div class="info-box">
         <h3>📚 What You'll Learn</h3>
         <ul>
