--- a/DestroyingEnemies/steps/step1.html
+++ b/DestroyingEnemies/steps/step1.html
@@ -17,8 +17,22 @@
     <div class="info-box">
         <h3>🎮 Option B: Start Fresh</h3>
         <p>If you want a clean slate, we've provided a starter project with all the code ready to go.</p>
-        <p>Just clone the starter project from MicroStudio and you're ready to begin!</p>
+        <p><strong>To use the starter project:</strong></p>
+        <ol style="margin-left: 20px;">
+            <li>Click the button below to open the starter project</li>
+            <li>Look for the <strong>"Clone"</strong> button at the top of the page</li>
+            <li>Click <strong>"Clone"</strong> to create your own copy in your account</li>
+            <li>The project will open in your account - now you can edit it!</li>
+        </ol>
     </div>
+
+    <p style="text-align: center; margin: 30px 0;">
+        <a href="https://microstudio.dev/i/jocolloman/destroyingenemiesstarter/"
+           target="_blank"
+           style="display: inline-block; background: linear-gradient(135deg, #667eea, #764ba2); color: white; padding: 20px 40px; border-radius: 10px; text-decoration: none; font-weight: bold; font-size: 1.3em; transition: transform 0.2s; box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);">
+           🚀 Open Starter Project
+        </a>
+    </p>
 
     <div class="warning-box">
         <h3>✅ Verify Your Setup</h3>
