--- a/AbstractingEnemies/steps/step0.html
+++ b/AbstractingEnemies/steps/step0.html
@@ -1,8 +1,25 @@
 <h2>Welcome! 🚀</h2>
 <div class="step-content">
+    <div class="success-box">
+        <h3>🎯 What You'll Build</h3>
+        <p>By the end of this challenge, you'll have a scalable enemy system that can handle any number of enemies! Check out the finished project:</p>
+        <iframe src="https://microstudio.io/jocolloman/abstractenemiesfinished/4WBSSJKN/" width="100%" height="400" style="border: 2px solid #4CAF50; border-radius: 8px; margin: 10px 0;"></iframe>
+        <p style="text-align: center; font-style: italic;">This is what your game will look like when you're done! 🎉</p>
+    </div>
+
     <p>Congratulations on completing the "Destroying Enemies" challenge! You've built a space game with collision detection and object state management.</p>
 
     <p>But now we're going to tackle a bigger problem: <strong>your code has hardcoded individual enemies</strong>. You have separate functions for left eye and right eye. What happens if you want 3 eyes? 10 enemies? 100 enemies?</p>
+
+    <div class="info-box">
+        <h3>🎮 Getting Started</h3>
+        <p>You have two options to begin this challenge:</p>
+        <ul>
+            <li><strong>Option 1 (Recommended):</strong> Clone the starter project from <a href="https://microstudio.dev/i/jocolloman/abstractenemiesstarter/" target="_blank" style="color: #FFD700; text-decoration: underline;">https://microstudio.dev/i/jocolloman/abstractenemiesstarter/</a></li>
+            <li><strong>Option 2:</strong> Continue using your own project from the "Destroying Enemies" challenge</li>
+        </ul>
+        <p>Both options will work! The starter project includes all the code from the previous challenge.</p>
+    </div>
 
     <div class="warning-box">
         <h3>🔴 The Hardcoding Problem</h3>
@@ -25,34 +42,6 @@
             <li>Use <strong>loops</strong> to process all enemies in one elegant function</li>
         </ul>
         <p><strong>Result:</strong> Add 100 enemies with the SAME code! This is how real game engines work.</p>
-    </div>
-
-    <div class="info-box">
-        <h3>🎯 What You'll Build</h3>
-        <p>By the end of this challenge, you will:</p>
-        <ul>
-            <li><strong>Step 1:</strong> Create a <code>create_enemy()</code> factory function</li>
-            <li><strong>Step 2:</strong> Create <code>init_enemies()</code> that builds one enemy</li>
-            <li><strong>Step 3:</strong> Create <code>draw_enemies()</code> that draws one enemy</li>
-            <li><strong>Step 4:</strong> Create <code>update_enemies()</code> that updates one enemy</li>
-            <li><strong>Step 5:</strong> Add a second enemy (and see the duplication problem!)</li>
-            <li><strong>Step 6:</strong> Refactor to use loops (and watch the duplication disappear!)</li>
-            <li><strong>Step 7:</strong> Migrate your eyes to the new enemy system</li>
-            <li><strong>Step 8:</strong> Demonstrate scalability with 5+ random enemies</li>
-            <li><strong>Step 9:</strong> Celebration and next steps!</li>
-        </ul>
-    </div>
-
-    <div class="success-box">
-        <h3>📚 Key Concepts You'll Learn</h3>
-        <ul>
-            <li><strong>Factory Pattern:</strong> Create objects with sensible defaults using a function</li>
-            <li><strong>Table-Driven Design:</strong> Store all similar objects in a table, let data drive behavior</li>
-            <li><strong>Generic Functions:</strong> Write one function that works with any number of objects</li>
-            <li><strong>Loops:</strong> Recognize duplication and convert it to loops</li>
-            <li><strong>Abstraction:</strong> Hide complexity behind simple interfaces</li>
-            <li><strong>Scalability:</strong> Build systems that grow with your game</li>
-        </ul>
     </div>
 
     <p><strong>Ready to learn how to scale your game? Click "Next" to begin!</strong></p>
