--- a/AbstractingEnemies/steps/step10.html
+++ b/AbstractingEnemies/steps/step10.html
@@ -1,78 +1,151 @@
-<h2>Step 7d: Refactor check_collisions() 💥</h2>
+<h2>Congratulations! 🎉</h2>
 <div class="step-content">
-    <p>Finally, let's apply the loop pattern to your <code>check_collisions()</code> function!</p>
+    <p>You've successfully completed the Abstracting Enemies challenge! You've learned professional game development patterns used in real engines and studios worldwide.</p>
 
-    <h3>🔴 Current Code (With Duplication)</h3>
-    <p>Your current <code>check_collisions()</code> manually checks both enemies:</p>
-
-    <div class="code-block no-copy"><pre>function check_collisions()
-  for ix, laser in pairs(lasers) do
-    -- Check collisions between lasers and eyes
-    if not left_eye.isDestroyed then
-      if boxes_colliding(laser, left_eye) then
-        left_eye.isDestroyed = true
-      end
-    end
-
-    if not right_eye.isDestroyed then
-      if boxes_colliding(laser, right_eye) then
-        right_eye.isDestroyed = true
-      end
-    end
-
-    -- Check collisions with FIRST enemy
-    local enemy = enemies[1]
-    if not enemy.isDestroyed then
-      if boxes_colliding(laser, enemy) then
-        enemy.isDestroyed = true
-      end
-    end
-
-    -- Check collisions with SECOND enemy - Exact same code, just [2]
-    enemy = enemies[2]
-    if not enemy.isDestroyed then
-      if boxes_colliding(laser, enemy) then
-        enemy.isDestroyed = true
-      end
-    end
-  end
-end</pre></div>
-
-    <h3>🎯 Your Challenge</h3>
-    <p>Replace the manual enemy collision checks (<code>enemies[1]</code> and <code>enemies[2]</code>) with a loop!</p>
+    <div class="success-box">
+        <h3>🏆 What You Accomplished</h3>
+        <ul>
+            <li>✅ Built a <strong>factory function</strong> that creates objects with sensible defaults</li>
+            <li>✅ Implemented <strong>table-driven design</strong> where data drives behavior</li>
+            <li>✅ Created <strong>generic functions</strong> that work with any number of enemies</li>
+            <li>✅ Recognized and refactored code duplication using <strong>loops</strong></li>
+            <li>✅ Migrated an entire old system to a new abstraction</li>
+            <li>✅ Demonstrated <strong>scalability</strong> - scaling from 1 to 100 enemies with the same code</li>
+        </ul>
+    </div>
 
     <div class="info-box">
-        <h3>💡 Hints</h3>
+        <h3>📚 Key Concepts You Mastered</h3>
         <ul>
-            <li>You need a <strong>nested loop</strong> - a loop inside the existing laser loop</li>
-            <li>Use: <code>for jx, enemy in pairs(enemies) do</code> (use <code>jx</code> instead of <code>ix</code> to avoid conflicts)</li>
-            <li>Keep the eye collision checks as-is - only replace the enemy collision blocks</li>
-            <li>The collision logic stays the same: <code>if not enemy.isDestroyed then</code> and <code>boxes_colliding(laser, enemy)</code></li>
-            <li>Remove the manual <code>enemies[1]</code> and <code>enemies[2]</code> blocks entirely</li>
+            <li><strong>🏭 Factory Pattern:</strong> Functions that create and return objects with defaults
+                <ul>
+                    <li>Reduces code duplication</li>
+                    <li>Ensures consistency</li>
+                    <li>Makes maintenance easier</li>
+                </ul>
+            </li>
+            <li><strong>📊 Table-Driven Design:</strong> Use data structures (tables) to control behavior
+                <ul>
+                    <li>Instead of hardcoding logic for each object</li>
+                    <li>Store objects in a table</li>
+                    <li>Loop through the table to apply the same logic</li>
+                </ul>
+            </li>
+            <li><strong>🔄 Loops and Abstraction:</strong> Write generic functions once, use them forever
+                <ul>
+                    <li>Recognize when code repeats</li>
+                    <li>Convert repetition to loops</li>
+                    <li>Scale systems without code changes</li>
+                </ul>
+            </li>
+            <li><strong>🎯 DRY Principle:</strong> Don't Repeat Yourself
+                <ul>
+                    <li>Eliminates bugs from copy-paste mistakes</li>
+                    <li>Makes code maintenance easier</li>
+                    <li>Scales elegantly</li>
+                </ul>
+            </li>
         </ul>
+    </div>
+
+    <div class="comparison">
+        <div class="comparison-side old">
+            <h4>Before (Hardcoding)</h4>
+            <div class="code-block no-copy"><pre>-- Separate variables
+left_eye = ...
+right_eye = ...
+enemy1 = ...
+enemy2 = ...
+
+-- Separate functions
+init_eyes() { ... }
+update_eyes() { ... }
+draw_eyes() { ... }
+
+-- To add enemies:
+-- Create new variables
+-- Add update code
+-- Add draw code
+-- Add collision code
+-- Lots of repetition!</pre></div>
+        </div>
+        <div class="comparison-arrow">➡️ Abstraction</div>
+        <div class="comparison-side new">
+            <h4>After (Abstraction)</h4>
+            <div class="code-block no-copy"><pre>-- One table
+enemies = {}
+
+-- Generic functions
+create_enemy() { ... }
+init_enemies() { ... }
+update_enemies() {
+  for ix, enemy in pairs(enemies) do
+    -- Update logic
+  end
+end
+draw_enemies() {
+  for ix, enemy in pairs(enemies) do
+    -- Draw logic
+  end
+end
+
+-- To add enemies:
+-- Just call create_enemy()
+-- Everything else works!</pre></div>
+        </div>
+    </div>
+
+    <div class="info-box">
+        <h3>🌟 How This Scales</h3>
+        <p>Look at how your system scales:</p>
+        <ul>
+            <li><strong>Step 4:</strong> 1 enemy ✅</li>
+            <li><strong>Step 5:</strong> 2 enemies ✅</li>
+            <li><strong>Step 6:</strong> Same 2 enemies, but with cleaner code via loops ✅</li>
+            <li><strong>Step 7:</strong> 4 enemies (2 eyes + 2 ships) ✅</li>
+            <li><strong>Step 8:</strong> 7 enemies (2 eyes + 2 ships + 5 random) ✅</li>
+            <li><strong>Challenge:</strong> 22 enemies (2 eyes + 2 ships + 20 random) ✅</li>
+        </ul>
+        <p><strong>Zero code changes to update_enemies() or draw_enemies() after Step 6!</strong></p>
     </div>
 
     <div class="warning-box">
-        <h3>⚠️ Nested Loops Explained</h3>
-        <p>This function will have TWO loops working together:</p>
+        <h3>💡 Real-World Usage</h3>
+        <p>This is exactly how professional game engines work:</p>
         <ul>
-            <li><strong>Outer loop</strong> - Already exists! Iterates through each laser (<code>for ix, laser in pairs(lasers)</code>)</li>
-            <li><strong>Inner loop</strong> - You need to add this! For each laser, check against ALL enemies (<code>for jx, enemy in pairs(enemies)</code>)</li>
+            <li><strong>Unity:</strong> GameObjects in scenes, systems that process all objects</li>
+            <li><strong>Unreal Engine:</strong> Actors in worlds, systems that iterate through them</li>
+            <li><strong>Godot:</strong> Nodes in scene trees, _process() handles all</li>
+            <li><strong>Any Game Engine:</strong> Data-driven design with generic systems</li>
         </ul>
-        <p>This is called a <strong>nested loop</strong> - a loop inside another loop. It checks every combination of laser-enemy pairs!</p>
+        <p>You've learned a fundamental pattern of professional game development!</p>
     </div>
 
-    <h3>✅ How to Know You're Done</h3>
-    <p>Run your game! Fire lasers at both enemies. They should both be destroyed when hit. If the collision detection works the same as before, you've successfully refactored it!</p>
+    <div class="challenge">
+        <h3>🚀 Next Challenges to Try</h3>
+        <ul>
+            <li><strong>Different Enemy Types:</strong> Create a <code>create_boss()</code> factory that makes larger, stronger enemies</li>
+            <li><strong>Enemy Behavior:</strong> Add patterns to enemies - some that follow the player, some that patrol</li>
+            <li><strong>Waves:</strong> Create waves of enemies that spawn at different times</li>
+            <li><strong>Particle Effects:</strong> Add explosions when enemies are destroyed</li>
+            <li><strong>Scoring:</strong> Add points when you destroy enemies (different points for different types)</li>
+            <li><strong>Difficulty Scaling:</strong> Make each wave slightly harder</li>
+        </ul>
+    </div>
 
     <div class="success-box">
-        <h3>✨ You've Eliminated ALL Duplication!</h3>
-        <p>Once you complete this step, you'll have refactored all three functions with loops:</p>
-        <ul>
-            <li>✅ <code>update_enemies()</code> - Uses a loop</li>
-            <li>✅ <code>draw_enemies()</code> - Uses a loop</li>
-            <li>✅ <code>check_collisions()</code> - Uses a nested loop</li>
-        </ul>
-        <p>Your code will be clean, scalable, and ready to handle ANY number of enemies!</p>
+        <h3>📖 Concepts to Remember</h3>
+        <p>Remember these key takeaways:</p>
+        <ol>
+            <li><strong>When code repeats with only indices changing → Use a loop</strong></li>
+            <li><strong>When creating similar objects → Use a factory function</strong></li>
+            <li><strong>When you want to scale → Use table-driven design</strong></li>
+            <li><strong>When maintaining is hard → Apply the DRY principle</strong></li>
+        </ol>
+    </div>
+
+    <div style="text-align: center; margin-top: 40px; padding: 30px; background: rgba(76, 175, 80, 0.1); border-radius: 10px;">
+        <h3 style="color: #4caf50; font-size: 2em; margin: 0;">🎓 You're Ready for Real Projects!</h3>
+        <p style="font-size: 1.2em; color: #a0a0a0; margin-top: 10px;">You now understand fundamental patterns used in professional game development. Go build amazing games! 🚀</p>
     </div>
 </div>
