--- a/AbstractingEnemies/steps/step7.html
+++ b/AbstractingEnemies/steps/step7.html
@@ -73,36 +73,32 @@ end</pre></div>
         </ul>
     </div>
 
-    <div class="comparison">
-        <div class="comparison-side old">
-            <h4>❌ Without Loop (Step 5)</h4>
-            <div class="code-block no-copy"><pre>-- Handle enemy 1
-enemy = enemies[1]
-if not enemy.isDestroyed then
-  -- ... update logic
+    <div style="display: flex; gap: 10px; align-items: flex-start; margin: 20px 0;">
+        <div style="flex: 1; min-width: 0;">
+            <h4>❌ Without Loop</h4>
+            <div class="code-block no-copy"><pre style="font-size: 0.85em;">enemy = enemies[1]
+if not enemy.isDestroyed
+  -- logic
 end
 
--- Handle enemy 2
 enemy = enemies[2]
-if not enemy.isDestroyed then
-  -- ... update logic
+if not enemy.isDestroyed
+  -- logic
 end
 
--- Handle enemy 3?
--- Copy-paste again!</pre></div>
+-- Copy-paste!</pre></div>
         </div>
-        <div class="comparison-arrow">➡️</div>
-        <div class="comparison-side new">
-            <h4>✅ With Loop (Step 6)</h4>
-            <div class="code-block no-copy"><pre>-- Handle ALL enemies!
-for ix, enemy in pairs(enemies) do
-  if not enemy.isDestroyed then
-    -- ... update logic
+        <div style="font-size: 2em; padding: 20px 5px; align-self: center;">➡️</div>
+        <div style="flex: 1; min-width: 0;">
+            <h4>✅ With Loop</h4>
+            <div class="code-block no-copy"><pre style="font-size: 0.85em;">for ix, enemy in
+  pairs(enemies) do
+  if not enemy.isDestroyed
+    -- logic
   end
 end
 
--- Works for 1, 2, 3,
--- 100, 1000 enemies!</pre></div>
+-- Works for ANY!</pre></div>
         </div>
     </div>
 
