--- a/AbstractingEnemies/steps/step9.html
+++ b/AbstractingEnemies/steps/step9.html
@@ -1,40 +1,67 @@
-<h2>Step 7c: Refactor draw_enemies() 🎨</h2>
+<h2>Step 9: Create a Random Enemy Function 🎲</h2>
 <div class="step-content">
-    <p>Now let's apply the same loop pattern to your <code>draw_enemies()</code> function!</p>
+    <p>Let's create a helper function that spawns enemies with random positions and velocities!</p>
 
-    <h3>🔴 Current Code (With Duplication)</h3>
-    <p>Your current <code>draw_enemies()</code> manually draws both enemies:</p>
+    <h3>🎯 What We're Building</h3>
+    <p>You're going to write a <code>random_enemy()</code> function that creates an enemy with random properties. This will be super useful later for adding variety to your game!</p>
 
-    <div class="code-block no-copy"><pre>function draw_enemies()
-  -- FIRST ENEMY
-  local enemy = enemies[1]
-  draw_box(enemy)
-  screen:drawSprite(enemy.sprite, enemy.x, enemy.y, enemy.width, enemy.height)
+    <h3>📋 Task: Create the random_enemy() Function</h3>
+    <p>Add this function to your code (you can put it right after your <code>create_enemy()</code> function):</p>
 
-  -- SECOND ENEMY - Exact same code, just [2]
-  enemy = enemies[2]
-  draw_box(enemy)
-  screen:drawSprite(enemy.sprite, enemy.x, enemy.y, enemy.width, enemy.height)
+    <div class="code-block no-copy"><pre>function random_enemy()
+  local enemy = create_enemy("enemy_ship", 32, 32)
+
+  -- Random position anywhere on screen
+  enemy.x = (math.random() - 0.5) * 200
+  enemy.y = (math.random() - 0.5) * 200
+
+  -- Random velocity
+  enemy.vx = (math.random() - 0.5) * 2
+  enemy.vy = (math.random() - 0.5) * 2
+
+  return enemy
 end</pre></div>
 
-    <h3>🎯 Your Challenge</h3>
-    <p>Refactor <code>draw_enemies()</code> to use a loop instead of duplicated code!</p>
-
     <div class="info-box">
-        <h3>💡 Hints</h3>
+        <h3>🔍 How This Works</h3>
         <ul>
-            <li>Use the same loop pattern from <code>update_enemies()</code>: <code>for ix, enemy in pairs(enemies) do</code></li>
-            <li>Keep the same drawing code: <code>draw_box(enemy)</code> and <code>screen:drawSprite(...)</code></li>
-            <li>Don't forget to add an <code>if not enemy.isDestroyed then</code> check so you don't draw destroyed enemies!</li>
-            <li>Remove the manual <code>enemies[1]</code> and <code>enemies[2]</code> blocks entirely</li>
+            <li><strong>math.random()</strong> - Returns a random number between 0 and 1</li>
+            <li><strong>(math.random() - 0.5)</strong> - Shifts range to -0.5 to 0.5 (both positive and negative)</li>
+            <li><strong>* 200</strong> - Scales position to cover the screen (-100 to 100)</li>
+            <li><strong>* 2</strong> - Scales velocity to -1 to 1 for movement speed</li>
+            <li><strong>return enemy</strong> - Returns the newly created random enemy</li>
         </ul>
     </div>
 
+    <h3>🧪 Testing Your Function</h3>
+    <p>To test your <code>random_enemy()</code> function, open the console in microStudio (click the console icon or press F12) and type:</p>
+
+    <div class="code-block no-copy"><pre>random_enemy()</pre></div>
+
+    <p>Each time you run this command, you should see a new enemy appear at a random position moving in a random direction!</p>
+
     <div class="warning-box">
-        <h3>⚠️ Important: Check for Destroyed Enemies!</h3>
-        <p>Unlike <code>update_enemies()</code>, you need to add the <code>if not enemy.isDestroyed then</code> check in <code>draw_enemies()</code>. This ensures you don't draw enemies that have been destroyed by lasers!</p>
+        <h3>⚠️ Console Testing Tips</h3>
+        <ul>
+            <li>Make sure your game is running first</li>
+            <li>The console is at the bottom of the microStudio interface</li>
+            <li>You can run <code>random_enemy()</code> multiple times to spawn multiple enemies</li>
+            <li>Watch them bounce around the screen!</li>
+        </ul>
     </div>
 
-    <h3>✅ How to Know You're Done</h3>
-    <p>Run your game! You should still see both enemies rendered on screen, and they should disappear when hit by lasers. If it works the same as before, you've successfully refactored it!</p>
+    <h3>🎬 What to Expect</h3>
+    <p>When you test your function:</p>
+    <ul>
+        <li>✅ A new enemy should appear somewhere on screen</li>
+        <li>✅ It should be moving in a random direction</li>
+        <li>✅ It should bounce off the edges like other enemies</li>
+        <li>✅ You can shoot it with lasers!</li>
+    </ul>
+
+    <div class="success-box">
+        <h3>✨ Coming Up Next...</h3>
+        <p>You've just created a powerful tool for spawning enemies! In a future lesson, we'll use this function to make your game even more exciting by spawning new enemies automatically after you've destroyed all the current ones.</p>
+        <p>Imagine: destroy all enemies → new wave spawns → infinite gameplay! 🚀</p>
+    </div>
 </div>
